[tool.poetry]
name = "repl_python3_UnnaturalMiniatureParallelprocessing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
sklearn = "^0.0"
flask-cors = "^3.0.9"
vader-sentiment = "^3.2.1"
vadersentiment = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
